--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap 5 - Starter Example</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 </head>
 <body>
 
 <!-- Start Home section-->
-<div id="home">
-    <nav class="navbar navbar-expand-lg navbar-light ">
+<div id="home" data-bs-spy="scroll" data-bs-target="#navbarResponsive"  >
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white" id="navbarResponsive">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" class="w-25"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +87,7 @@
 
 <!-- Start Fixed Background IMG -->
 
-<div class="fixed-background" id="service">
+<!--<div class="fixed-background" id="service">
     <div class="services">
         <div class="service-text">
             <h1>Advance to the next level</h1>
@@ -103,36 +104,36 @@
             <img src="img/matrix.jpg" alt="" class="img-fluid">
         </div>
     </div>
-</div>
+</div>-->
 
 <!-- End Fixed Background IMG -->
 
-<div id="contact" class="">
-    <div class="">
-        <div class=""></div>
-        <h1 class="">Built with ease</h1>
-        <div class=""></div>
-        <p class="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda hic, magni fuga accusantium
+<div id="contact" class="container ">
+    <div class="text-center">
+        <div class="border-top border-dark w-25 mt-5 mx-auto"></div>
+        <h1 class="my-3 text-uppercase">Built with ease</h1>
+        <div class="border-top border-dark w-25 mb-5 mx-auto"></div>
+        <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda hic, magni fuga accusantium
             nulla ratione odit praesentium? Maiores in veniam accusamus cupiditate necessitatibus. Perspiciatis ab
             aliquam quod fugiat commodi atque.</p>
-        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dolorum ullam vitae id
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dolorum ullam vitae id
             veritatis quidem eaque ratione, excepturi minima porro dicta. Voluptatem maxime magnam illo aliquam corporis
             provident sunt sequi?</p>
-        <a href="#" class="">Contact Us</a>
+        <a href="#" class="btn btn-outline-dark btn-lg my-5">Contact Us</a>
     </div>
 </div>
 
 <footer>
-    <div class="">
+    <div class="bg-dark text-center pb-5">
         <div class="">
             <div class="">
-                <img src="img/logo.png" alt="" class="img-fluid">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque accusamus rem deleniti.</p>
-                <ul class="">
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                <img src="img/logo.png" alt="" class="img-fluid w-25">
+                <p class="text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque accusamus rem deleniti.</p>
+                <ul class="d-flex justify-content-between">
+                    <li><a href="#" ><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#"><i class="bi bi-youtube"></i></a></li>
                 </ul>
             </div>
         </div>
